# imsmrf

./: README.md
sourcecode/: LICENSE  Makefile.am  autogen.sh  configure.ac  make_distribution.sh  ms.spec.in  uncrustify.sh
sourcecode/conf/: Doxyfile.in
sourcecode/include/: fw_api.h  ms_events.h  ms_ret_code.h
sourcecode/include/call_leg/: call_leg_api.h  call_leg_define.h
sourcecode/include/codec/g729/: basic_op.h  oper_32b.h  tab_ld8k.h  typedef.h
sourcecode/include/codec/gsm/: gsm.h  proto.h
sourcecode/include/dreg/: dreg.h
sourcecode/include/librtp/: rtcp-packet.h  rtp-packet.h
sourcecode/include/media/: datapkt.h  fileread.h  filereadpkt.h  g729enc.h  level.h  media.h  mixer.h  rtpsend.h  signalpkt.h  timequeue.h  udppkt.h  udprecv.h  udpsend.h  wavread.h
sourcecode/include/mscml_sm/: mscml_sm_api.h
sourcecode/include/util/: circular_list.h
sourcecode/ms_prereq/: install_ms_prereq.sh
sourcecode/ms_prereq/include/amps/: AMPS_API.h  AMPS_Defines.h
sourcecode/ms_prereq/include/libsdp_oam-0.0/: sdp_oam_api.h
sourcecode/ms_prereq/include/libsdpparser-0.5/: sdp_api.h
sourcecode/ms_prereq/include/libutil-0.3/: list_util.h  tstring.h
sourcecode/ms_prereq/include/sipstack/: SIP_API.h  SIP_Defines.h
sourcecode/ms_prereq/lib/libsdp_oam-0.0/: libsdp_oam-0.0.so.0.0.0
sourcecode/ms_prereq/lib/libsdpparser-0.5/: libsdpparser-0.5.so.0.0.5
sourcecode/ms_prereq/lib/libutil-0.3/: libutil-0.3.so.0.0.3
sourcecode/ms_prereq/pkgconfig/: libsdp_oam-0.0.pc  libsdpparser-0.5.pc  libutil-0.3.pc
sourcecode/src/: Makefile.am
sourcecode/src/call_leg/: call_leg.c  call_leg.h  call_leg_sm.h
sourcecode/src/codec/: Makefile.am
sourcecode/src/codec/g711/: Makefile.am  g711.c
sourcecode/src/codec/g729/: Makefile.am  basic_op.c  bits.c  cod_ld8k.c  de_acelp.c  dec_lag3.c  dec_ld8k.c  gainpred.c  lpcfunc.c  lspgetq.c  oper_32b.c  p_parity.c  pre_proc.c  pred_lt3.c  qua_gain.c  tab_ld8k.c
sourcecode/src/codec/gsm/: Makefile.am  add.c  gsm_create.c  gsm_decode.c  gsm_destroy.c  gsm_implode.c  lpc.c  short_term.c
sourcecode/src/dreg/: Makefile.am  dreg.cpp
sourcecode/src/librtp/: md5c.c  rtcp-packet.c  rtp.c
sourcecode/src/media/: Makefile.am  media_cb.c  media_priv.h
sourcecode/src/media/buffer/: Makefile.am  buffer_api.c
sourcecode/src/media/filewrite/: filewrite_api.c
sourcecode/src/media/g729dec/: g729dec_api.c  g729dec_cb.c  g729dec_priv.h
sourcecode/src/media/g729enc/: g729enc_api.c  g729enc_cb.c
sourcecode/src/media/gsmdec/: gsmdec_api.c  gsmdec_cb.c  gsmdec_priv.h
sourcecode/src/media/gsmenc/: Makefile.am  gsmenc_api.c  gsmenc_priv.h
sourcecode/src/media/level/: level.c  level_cb.c  level_priv.h
sourcecode/src/media/mixer/: Makefile.am  mixer_priv.h
sourcecode/src/media/null/: Makefile.am  null_api.c  null_cb.c
sourcecode/src/media/pcmudec/: pcmudec_cb.c  pcmudec_priv.h
sourcecode/src/media/pcmuenc/: Makefile.am
sourcecode/src/media/pkt/: Makefile.am  datapkt.c  rtppkt.c  signalpkt.c  wavreadpkt.c
sourcecode/src/media/reseqbuffer/: reseqbuffer_cb.c  reseqbuffer_priv.h
sourcecode/src/media/timequeue/: Makefile.am  timequeue_api.c  timequeue_priv.h
sourcecode/src/media/udprecv/: udprecv_cb.c  udprecv_priv.h
sourcecode/src/media/udpsend/: Makefile.am  udpsend_api.c  udpsend_priv.h
sourcecode/src/media/wavread/: Makefile.am  wavread_cb.c  wavread_priv.h
sourcecode/src/media/wavwrite/: Makefile.am  wavwrite_api.c  wavwrite_cb.c
sourcecode/src/ms/: Makefile.am  ms_config_api.c
sourcecode/src/ms_app/: Makefile.am  call_leg_handler.h  ms_media.c  ms_mm.c  ms_mscml_handler.c  ms_sm_handler.c  ms_util.h  mscml.xsd  non_conf_sip_handler.c
sourcecode/src/mscml_encoder/: mscml_encoder.c  mscml_encoder.h
sourcecode/src/mscml_sm/: Makefile.am  mscml_sm.h
sourcecode/src/mscml_sm/play/: Makefile.am  mscml_play.c  mscml_play.h  mscml_play_onexit.c
sourcecode/src/mscml_sm/play_collect/: mscml_play_collect.c  mscml_play_collect.h
sourcecode/src/mscml_sm/play_record/: mscml_play_record.c
sourcecode/src/snmp/: Makefile.am  snmp_comm.c  snmp_comm_priv.c
sourcecode/src/snmp_parser/: snmp.c
sourcecode/src/util/: Makefile.am  sip_util.c
sourcecode/test/call_leg/: call_leg_test.c  call_leg_test.h
sourcecode/test/dreg/: test_hash_dreg1.c  test_range_dreg1.c  test_repetition_dreg1.c  test_star_dreg1.c
sourcecode/test/media/: test_buffer.c  test_filewrite.c  test_g729dec.c  test_g729enc.c  test_gsmdec.c  test_level2.c  test_mixer1.c  test_reseqbuffer.c  test_udpsend.c  test_wavread.c  test_wavwrite.c
sourcecode/test/mscml_encoder/: Makefile.am  mscml_encoder_test1.c
sourcecode/test/play/: duration_test1.c  mscml_play_tests.h  play_unit_tests.c  play_unit_tests.h  repeat_test2.c  repeat_test3.c  seq_test1.c  test_mscml_play.c  unit_tests.c  unit_tests.h
sourcecode/test/play_collect/: beep_test1.c  both_maxdigit_regex_test1.c  delay_test1.c  dtmfkey_test1.c  duration_test1.c  endsilence_test1.c  extradigit_timer_test1.c  firstdigit_timer_test1.c  initsilence_test1.c  repeat_test3.c  returnkey_test1.c  test_mscml_play.h  unit_tests.h
sourcecode/test/play_record/: beep_test1.c  dtmfkey_test1.c  escapekey_test1.c  play_unit_tests.h  recordduration_test1.c  repeat_test1.c  repeat_test2.c  seq_test1.c  test_mscml_play.h  test_play.c  unit_tests.h
sourcecode/test/sdp/: test_sdpparser3.c
sourcecode/test/snmp/: Makefile.am  start_snmp_client.sh  start_snmp_server.sh  test_snmp_client2.sh  test_snmp_client3.sh  test_snmp_client4.sh  test_snmp_client5.sh  test_snmp_get1.c  test_snmp_nserver1.c  test_snmp_server1.c  test_snmp_set1.c
sourcecode/test/snmp_parser/: test_snmp_request1.c  test_snmp_request2.c  test_snmp_request_table1.c  test_snmp_response2.c  test_snmp_response_table1.c
sourcecode/test/util/: test_cir_list2.c  test_sync_timer1.c
sourcecode/tmp/: change_level.sh  copy_media_comp.sh  gen_versioned_define.awk  get_include.sh  record_raw_file  rxer.sh  send_gsm_file.sh
sourcecode/tmp/doxygensample/: sample.c  sample.h
trunk/sourcecode/src/call_leg/: Makefile.am  call_leg_api.c  call_leg_sm.c  (+2 more)
(+402 files in other folders)
