
noinst_PROGRAMS = test_dreg1 test_dreg2 test_x_dreg1 test_star_dreg1 test_hash_dreg1 test_dot_dreg1 test_digit_dreg1 test_range_dreg1 test_repetition_dreg1

test_dreg1_SOURCES = test_dreg1.c
test_dreg2_SOURCES = test_dreg2.c
test_x_dreg1_SOURCES = test_x_dreg1.c
test_star_dreg1_SOURCES = test_star_dreg1.c
test_hash_dreg1_SOURCES =  test_hash_dreg1.c
test_dot_dreg1_SOURCES =  test_dot_dreg1.c
test_digit_dreg1_SOURCES =  test_digit_dreg1.c
test_range_dreg1_SOURCES =  test_range_dreg1.c
test_repetition_dreg1_SOURCES = test_repetition_dreg1.c

INCLUDES = -I$(top_srcdir)/include $(GLIB_DEPS_CFLAGS)

LIBS = -ldreg -L$(top_srcdir)/src/dreg -lstdc++ -lamps $(GLIB_DEPS_LIBS) -lms -L$(top_srcdir)/src/ms

